--- a/readthedocsext/theme/templates/builds/partials/version_list.html
+++ b/readthedocsext/theme/templates/builds/partials/version_list.html
@@ -1,8 +1,6 @@
-{% extends "includes/crud/list.html" %}
+{% extends "includes/crud/table_list.html" %}
 
 {% load i18n %}
-
-{% load gravatar %}
 
 {% load core_tags %}
 {% load privacy_tags %}
@@ -51,19 +49,20 @@
   {% trans "No versions found for this project or filter" %}
 {% endblock list_placeholder_header %}
 {% block list_placeholder_text %}
-  <div class="ui primary button">Activate a version</div>
+  <div class="ui primary button">{% trans "Activate a version" %}</div>
 {% endblock list_placeholder_text %}
 
-{% block list_item_start %} <div class="item" data-bind="with: version({id: {{ object.pk }}, url: '{% url "projects-versions-detail" object.project.slug object.slug %}'})">
+{% block list_item_start %}
+  <tr class="middle aligned" data-bind="with: version({id: {{ object.pk }}, url: '{% url "projects-versions-detail" object.project.slug object.slug %}'})">
 {% endblock list_item_start %}
 
 {% block list_item_right_menu %}
-  <div class="ui small compact right floated icon buttons" data-bind="event: {mouseover: fetch}">
+  <div class="ui small icon buttons" data-bind="event: {mouseover: fetch}">
 
     {% blocktrans trimmed with version=object.verbose_name asvar label_view %}
       View documentation for version {{ version }}
     {% endblocktrans %}
-    <a class="ui icon {% if not object.built %} disabled{% endif %} button"
+    <a class="ui {% if not object.built %} disabled{% endif %} button"
         data-bind="attr: {href: url_docs}"
         target="_blank"
         data-content="{{ label_view }}"
@@ -75,7 +74,7 @@
       Downloadable formats for version {{ version }}
     {% endblocktrans %}
     <button
-        class="ui icon{% if not object.has_epub and not object.has_htmlzip and not object.has_pdf %} disabled{% endif %} dropdown button"
+        class="ui {% if not object.has_epub and not object.has_htmlzip and not object.has_pdf %} disabled{% endif %} dropdown button"
         data-bind="event: {click: fetch}"
         data-content="{{ label_download }}"
         aria-label="{{ label_download }}">
@@ -101,7 +100,7 @@
       Additional options for version {{ version }}
     {% endblocktrans %}
     {% if is_project_admin %}
-      <div class="ui icon dropdown button" data-content="{{ label_admin }}" aria-label="{{ label_admin }}">
+      <div class="ui dropdown button" data-content="{{ label_admin }}" aria-label="{{ label_admin }}">
         <i class="fa-solid fa-ellipsis icon"></i>
         <div class="menu">
           <div class="header">{% trans "Admin" %}</div>
@@ -124,26 +123,47 @@
   </div>
 {% endblock list_item_right_menu %}
 
-{% block list_item_header %}
+{% block list_item_icon %}
   {% include "builds/includes/status_icon.html" with build=object.builds.first circular=True %}
+{% endblock list_item_icon %}
 
-  <a class="ui basic label" href="{% url "builds_project_list" object.project.slug %}?version={{ object.slug }}">
-    <i class="fa-duotone fa-code-branch icon"></i>
-    <code>{{ object.verbose_name }}</code>
+{% block list_item_header %}
+  <a href="{% url "builds_project_list" object.project.slug %}?version={{ object.slug }}">
+    {{ object.verbose_name }}
   </a>
+
+  <div class="sub header">
+    {% with build=object.last_build %}
+      <time data-content="{{ build.date }}">
+        {# Translators: this will read like "1 month, 3 days ago" #}
+        {% blocktrans with build.date|timesince as date trimmed %}
+          Last build {{ date }} ago
+        {% endblocktrans %}
+      </time>
+    {% endwith %}
+  </div>
+{% endblock list_item_header %}
+
+{% block list_item_meta_items %}
+
   {% if object.slug == project.default_version %}
     {% trans "default" context "Version is the default version" as text %}
     {% blocktrans trimmed with version=object.verbose_name asvar popup %}
       Version {{ version }} is the default version
     {% endblocktrans %}
-    {% include "includes/components/config_label.html" with icon="fa-solid fa-asterisk" text=text popup=popup %}
+    <div class="item">
+      {% include "includes/components/config_label.html" with icon="fa-solid fa-asterisk" text=text popup=popup %}
+    </div>
   {% endif %}
+
   {% if object.slug == project.stable_version %}
     {% trans "stable" context "Version is the stable version" as text %}
     {% blocktrans trimmed with version=object.verbose_name asvar popup %}
       Version {{ version }} is the stable version
     {% endblocktrans %}
-    {% include "includes/components/config_label.html" with icon="fa-solid fa-asterisk" text=text popup=popup %}
+    <div class="item">
+      {% include "includes/components/config_label.html" with icon="fa-solid fa-asterisk" text=text popup=popup %}
+    </div>
   {% endif %}
 
   {% if request.user in project.users.all %}
@@ -152,7 +172,9 @@
       {% blocktrans trimmed with version=object.verbose_name asvar popup %}
         Version {{ version }} is private
       {% endblocktrans %}
-      {% include "includes/components/config_label.html" with icon="fa-duotone fa-lock" text=text popup=popup %}
+      <div class="item">
+        {% include "includes/components/config_label.html" with icon="fa-duotone fa-lock" text=text popup=popup %}
+      </div>
     {% endif %}
   {% endif %}
 
@@ -161,15 +183,17 @@
     {% blocktrans trimmed with version=object.verbose_name asvar popup %}
       Version {{ version }} is hidden
     {% endblocktrans %}
-    {% include "includes/components/config_label.html" with icon="fa-duotone fa-eye-slash" text=text popup=popup %}
+    <div class="item">
+      {% include "includes/components/config_label.html" with icon="fa-duotone fa-eye-slash" text=text popup=popup %}
+    </div>
   {% endif %}
-{% endblock list_item_header %}
 
-{% block list_item_meta %}
-  <div class="item">
-    {% with build=object.builds.first %}
-      {% if build %}
-        <i class="fad fa-history icon"></i>
+{% endblock list_item_meta_items %}
+
+{% block list_item_extra_items %}
+  {% with build=object.last_build %}
+    {% if build %}
+      <div class="item">
         <span data-bind="with: create_popup">
           <a
             data-bind="popup: {}"
@@ -179,25 +203,8 @@
             <code>Build #{{ build.id }}</code>
           </a>
           {% include "includes/popupcards/build.html" with build=build %}
-          <span>was built {{ build.date|timesince }} ago</span>
         </span>
-      {% endif %}
-    {% endwith %}
-
-    {{ build.date|timesince }}
-  </div>
-
-  <a class="item">
-    <i class="fa-duotone fa-code-branch icon"></i>
-    <code>{{ object.identifier_friendly }}</code>
-  </a>
-
-  <a
-    class="item"
-    href="{% url "builds_project_list" object.project.slug %}?version={{ object.slug }}">
-    <i class="fa-duotone fa-history icon"></i>
-    {% blocktrans trimmed with count=object.builds.count %}
-      {{ count }} total builds
-    {% endblocktrans %}
-  </a>
-{% endblock list_item_meta %}
+      </div>
+    {% endif %}
+  {% endwith %}
+{% endblock list_item_extra_items %}
