--- a/readthedocsext/theme/templates/includes/popupcards/version.html
+++ b/readthedocsext/theme/templates/includes/popupcards/version.html
@@ -1,7 +1,36 @@
-<div class="ui flowing popup" data-bind="withHover: {}">
-  <a class="header">Version {{ version.verbose_name }}</a>
-  <div class="meta">
-    100 builds
+{% extends "includes/popupcards/base.html" %}
+
+{% load i18n %}
+
+{% block popupcard_content %}
+  <div class="header">
+    {% blocktrans with project=version.project.name version=version.verbose_name %}
+      {{ project }} version {{ version }}
+    {% endblocktrans %}
   </div>
-  <div class="ui basic button">View some long thing blah docs</div>
-</div>
+  <div class="meta">
+    {% blocktrans with project=version.project.name %}
+      For project {{ project }}
+    {% endblocktrans %}
+  </div>
+  <div class="description">
+    <div class="ui list">
+      <div class="item">
+        <i class="fa-duotone fa-history icon"></i>
+        <div class="content">
+          <div class="header">Total time</div>
+          <div class="description">1 MILLION</div>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock popupcard_content %}
+
+{% block popupcard_extra_content %}
+  <span>
+    <a href="{{ version.last_build.get_absolute_url }}">
+      <i class="fa-duotone fa-code-branch icon"></i>
+      <code>{{ build.commit|slice:"0:8" }}</code>
+    </a>
+  </span>
+{% endblock popupcard_extra_content %}
