--- a/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
+++ b/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
@@ -4,30 +4,20 @@
 {% get_providers as socialaccount_providers %}
 
 {% for provider in socialaccount_providers %}
-  {% if provider.id == "openid" %}
-    {% for brand in provider.get_brands %}
-      <li class="item">
-        <a title="{{ brand.name }}"
-           class="ui button {{ provider.id }} {{ brand.id }} button"
-           href="{% provider_login_url provider.id openid=brand.openid_url process=process next=next %}"
-           >
-           {% blocktrans trimmed with brand_name=brand.name verbiage=verbiage|default:'Connect to' %}
-             {{ verbiage }} {{ brand_name }}
-           {% endblocktrans %}
-        </a>
-      </li>
-    {% endfor %}
-  {% endif %}
+  {# OpenID is not implemented #}
   {% if provider.id != 'bitbucket' %}
-    <li  class="item">
-      <a title="{{ provider.name }}"
-         class="ui button"
-         href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params next=next %}"
-         > <i class="fa-brands fa-{{ provider.name|lower }} icon"></i>
-         {% blocktrans trimmed with provider_name=provider.name verbiage=verbiage|default:'Connect to' %}
-           {{ verbiage }} {{ provider_name }}
-         {% endblocktrans %}
-      </a>
+    <li class="item">
+      <form class="ui form" 
+            method="post"
+            action="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+        {% csrf_token %}
+        <button class="ui button" type="submit" title="{{ provider.name }}">
+          <i class="fa-brands fa-{{ provider.name|lower }} icon"></i>
+          {% blocktrans trimmed with provider_name=provider.name verbiage=verbiage|default:'Connect to' %}
+            {{ verbiage }} {{ provider_name }}
+          {% endblocktrans %}
+        </button>
+      </form>
     </li>
   {% endif %}
 {% endfor %}
