--- a/readthedocsext/theme/templates/account/login.html
+++ b/readthedocsext/theme/templates/account/login.html
@@ -1,66 +1,60 @@
 {% extends "account/base.html" %}
 
-{% load i18n %}
 {% load account socialaccount %}
+{% load crispy_forms_tags %}
+{% load i18n %}
 
 {% block title %}{% trans "Log in" %}{% endblock %}
 
-{% block content-wrapper %}
-  {% get_providers as socialaccount_providers %}
+{% block content %}
+  <div class="ui stackable padded grid">
 
-  <div class="ui middle aligned center aligned very relaxed padded grid">
-    <div class="six wide computer twelve wide tablet sixteen wide mobile left aligned column">
-      <section class="ui raised segment">
+    <div class="violet four wide computer only column"></div>
 
-        <form class="ui large form" method="POST" action="{% url "account_login" %}">
+    <div class="twelve wide computer sixteen wide tablet sixteen wide mobile column">
+      {% get_providers as socialaccount_providers %}
+
+      <div class="ui small stackable aligned secondary menu" data-bind="semanticui: {tab: {autoTabActivation: 'vcs', ignoreFirstLoad: true}}">
+        {# This is purposely minimal, as the verbiage for "Log in with connected account" is a mountful #}
+        <a class="left item active" data-tab="vcs" data-content="{% trans "Connect your account" %}">
+          <i class="fad fa-cloud icon"></i>
+        </a>
+
+        <a class="right item" data-tab="email">
+          <i class="fad fa-envelope icon"></i>
+          {% trans "Log in with email" %}
+        </a>
+      </div>
+      <div class="ui basic center aligned tab segment active" data-tab="vcs">
+        <div class="ui relaxed list">
+          {# Translators: this will read "Log in with GitHub", where "log in" is a verb #}
+          {% blocktrans asvar text_log_in %}Log in using{% endblocktrans %}
+          {% include "socialaccount/snippets/provider_list.html" with process="login" verbiage=text_log_in %}
+        </div>
+      </div>
+      <div class="ui basic vertically fitted tab segment" data-tab="email">
+
+        <p class="ui center aligned vertically fitted small basic fluid segment">
+          {% blocktrans trimmed %}
+            Need an account? <a href="{{ signup_url }}">Sign up</a> first.
+          {% endblocktrans %}
+        </p>
+
+        <form class="ui form" method="post" action="{% url "account_login" %}">
           {% csrf_token %}
-          <div class="field">
-            <label for="id_login">{% trans "Login" %}</label>
-            <input autofocus="autofocus" id="id_login" name="login" placeholder="{% trans "Username or e-mail" %}" type="text" />
-          </div>
-          <div class="field">
-            <label for="id_password">{% trans "Password" %}</label>
-            <input id="id_password" name="password" placeholder="{% trans "Password" %}" type="password" />
-          </div>
-          <div class="field">
-            <div class="ui checkbox">
-              <input class="hidden" id="id_remember" name="remember" type="checkbox"></p>
-              <label for="id_remember">{% trans "Remember Me" %}</label>
-            </div>
-          </div>
-
+          {{ form|crispy }}
           {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
 
-          <button class="ui primary fluid button" type="submit">{% trans "Sign in" %}</button>
-
-          {% if socialaccount_providers %}
-            <div class="ui horizontal divider">Or sign in with</div>
-
-            <div class="ui two column grid">
-              <div class="column">
-                <a class="ui github fluid button" href="{% provider_login_url "github" process="login" scope=scope auth_params=auth_params %}">
-                  <i class="fa-brands fa-github icon"></i>
-                  {% trans "GitHub" %}
-                </a>
-              </div>
-              <div class="column">
-                <a class="ui bitbucket fluid button" href="{% provider_login_url "bitbucket_oauth2" process="login" scope=scope auth_params=auth_params %}">
-                  <i class="fa-brands fa-bitbucket icon"></i>
-                  {% trans "Bitbucket" %}
-                </a>
-              </div>
-            </div>
-          {% endif %}
+          <a class="ui small text" href="{% url 'account_reset_password' %}">{% trans "Forgot your password?" %}</a>
+          <button class="ui primary right floated button" type="submit">
+            {% trans "Log in" %}
+          </button>
 
         </form>
-      </section>
+      </div>
 
-      <section class="ui segment">
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot your password?" %}</a>
-      </section>
     </div>
   </div>
-
-{% endblock %}
+{% endblock content %}
