--- a/readthedocsext/theme/templates/profiles/private/token_list.html
+++ b/readthedocsext/theme/templates/profiles/private/token_list.html
@@ -2,9 +2,9 @@
 
 {% load i18n %}
 
-{% block title %}{% trans "API Tokens" %}{% endblock %}
+{% block title %}{% trans "API tokens" %}{% endblock %}
 {% block profile_admin_tokens %}active{% endblock %}
-{% block edit_content_header %} {% trans "API Tokens" %} {% endblock %}
+{% block edit_content_header %} {% trans "API tokens" %} {% endblock %}
 
 {% block edit_sidebar_embed_doc %}api/v3{% endblock edit_sidebar_embed_doc %}
 
