--- a/readthedocsext/theme/templates/account/password_change.html
+++ b/readthedocsext/theme/templates/account/password_change.html
@@ -6,11 +6,14 @@
 {% block title %}{% trans "Security" %}{% endblock %}
 {% block profile_admin_change_password %}active{% endblock %}
 {% block edit_content_header %}{% trans "Security" %}{% endblock %}
-{% block edit_content_subheader %}{% trans "Change Password" %}{% endblock %}
+{% block edit_content_subheader %}{% trans "Change password" %}{% endblock %}
 
 {% block edit_content %}
   <form method="POST" action="." class="ui form">
     {% csrf_token %}
     {{ form|crispy }}
+    <button class="ui primary button" type="submit">
+      {% trans "Save" %}
+    </button>
   </form>
 {% endblock %}
