--- a/readthedocsext/theme/templates/profiles/base_profile_edit.html
+++ b/readthedocsext/theme/templates/profiles/base_profile_edit.html
@@ -4,26 +4,47 @@
 {% load core_tags %}
 
 {% block content %}
-  {# TODO don't do this. fix the spacing issue with the container #}
-  <p></p>
-
-  <div class="ui two column stackable grid">
-    <div class="ui three wide column">
+  <div class="ui stackable grid">
+    <div class="five wide computer five wide tablet sixteen wide mobile column">
       <div class="ui vertical pointing fluid menu">
         {% block profile-admin-nav %}
           <a class="item {% block profile_admin_details %}{% endblock %}" href="{% url 'profiles_profile_edit' %}">{% trans "Account" %}</a>
-          <a class="item {% block profile_admin_change_email %}{% endblock %}" href="{% url 'account_email' %}">{% trans "Email Addresses" %}</a>
+          <a class="item {% block profile_admin_change_email %}{% endblock %}" href="{% url 'account_email' %}">{% trans "Email addresses" %}</a>
           <a class="item {% block profile_admin_change_password %}{% endblock %}" href="{% url 'account_change_password' %}">{% trans "Security" %}</a>
-          <a class="item {% block profile_admin_social_accounts %}{% endblock %}" href="{% url 'socialaccount_connections' %}">{% trans "Connected Services" %}</a>
-          <a class="item {% block profile_admin_tokens %}{% endblock %}" href="{% url 'profiles_tokens' %}">{% trans "API Tokens" %}</a>
-          <a class="item {% block profile_admin_gold_edit %}{% endblock %}" href="{% url 'gold_detail' %}">{% trans "Gold Membership" %}</a>
+          <a class="item {% block profile_admin_social_accounts %}{% endblock %}" href="{% url 'socialaccount_connections' %}">{% trans "Connected services" %}</a>
+          <a class="item {% block profile-admin-security-log %}{% endblock %}" href="{% url 'profiles_security_log' %}">{% trans "Security log" %}</a>
+          <a class="item {% block profile_admin_tokens %}{% endblock %}" href="{% url 'profiles_tokens' %}">{% trans "API tokens" %}</a>
+          <a class="item {% block profile_admin_gold_edit %}{% endblock %}" href="{% url 'gold_detail' %}">{% trans "Gold membership" %}</a>
+
           {% if USE_PROMOS %}
             <a class="item {% block profile_admin_advertising %}{% endblock %}" href="{% url 'account_advertising' %}">{% trans "Advertising" %}</a>
           {% endif %}
         {% endblock %}
       </div>
+
+      {% block edit_sidebar %}
+        {% comment %}
+        <div class="ui basic segment">
+          <h2 class="ui small header">{% trans "Help topics" %}</h2>
+          {% block edit_sidebar_help_topics %}
+            <div data-embed-doc-view="{% block edit_sidebar_embed_doc %}{% endblock %}"
+                 data-bind="template: { name: 'doc-topics' }">
+            </div>
+          {% endblock edit_sidebar_help_topics %}
+        </div>
+        <div class="ui basic segment">
+          <a href="https://docs.readthedocs.io/en/stable/" target="_blank">
+            View our full docs
+          </a>
+        </div>
+        {% endcomment %}
+
+        {% block edit_sidebar_extra %}
+        {% endblock edit_sidebar_extra %}
+      {% endblock edit_sidebar %}
+
     </div>
-    <div class="ui nine wide column">
+    <div class="eleven wide computer eleven wide tablet sixteen wide mobile column">
 
       <h2 class="ui medium dividing header">
         {% block edit_content_header %}
@@ -38,27 +59,6 @@
         {% block edit_content %}
         {% endblock edit_content %}
       </div>
-    </div>
-    <div class="ui four wide column" id="edit-right">
-
-      {% block edit_sidebar %}
-        <div class="ui basic segment">
-          <h2 class="ui small header">{% trans "Help topics" %}</h2>
-          {% block edit_sidebar_help_topics %}
-            <div data-embed-doc-view="{% block edit_sidebar_embed_doc %}{% endblock %}"
-                 data-bind="template: { name: 'doc-topics' }">
-            </div>
-          {% endblock edit_sidebar_help_topics %}
-        </div>
-        <div class="ui basic segment">
-          <a href="https://docs.readthedocs.io/en/stable/" target="_blank">
-            View our full docs
-          </a>
-        </div>
-
-        {% block edit_sidebar_extra %}
-        {% endblock edit_sidebar_extra %}
-      {% endblock edit_sidebar %}
 
     </div>
 
